button wrapping fix

--- a/src/less/components/header.less
+++ b/src/less/components/header.less
@@ -24,7 +24,7 @@
     .downloadButton {
         border-radius: 1rem;
         max-width: 9rem;
-        padding: 1.3rem 1.3rem 1.3rem 3.5rem;
+        padding: 1.3rem 1rem 1.3rem 4rem;
         margin: 1rem auto;
         line-height: 1.3rem;
         box-shadow: 0 .3rem 1rem rgba(0,0,0,.5);
